--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ header .logo h2 {
 
 header.scrolled .logo h2 {
   color: inherit;
-  background: linear-gradient(90deg, #713d8a, #a51b24);
+  background: url("../public/images/background_color.jpg") no-repeat center center / cover;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -105,7 +105,7 @@ header nav {
     font-size: 1.2rem;
   }
 
-  header .contact-button button {
+  header .contact-button a {
     display: none;
   }
 }
@@ -123,7 +123,8 @@ header nav a:hover {
 }
 
 /* Contact Button */
-header .contact-button button {
+header .contact-button a {
+  text-decoration: none;
   padding: 0.5rem 1.2rem;
   background-color: #ffa200;
   color: #f9f4f4;
@@ -133,7 +134,7 @@ header .contact-button button {
   transition: all 0.3s ease;
 }
 
-header.scrolled .contact-button button {
+header.scrolled .contact-button a {
   background-color: #f5f5f8;
   color: rgb(102, 65, 65);
   border-color: rgb(102, 65, 65);
@@ -198,7 +199,7 @@ line-height: 20px;
 
 
 
-.cta-button {
+.cta-button  {
   margin-top: 20px;
   display: inline-block; /* Ensures the button behaves like a block element */
   padding: 12px 24px; /* Adds padding */
@@ -471,13 +472,15 @@ color: whitesmoke;
 
   .service-card {
     width: 100%; /* Full width on mobile */
-    min-height: auto; /* Allow height to adjust for content */
+    max-height: 450px; /* Allow height to adjust for content */
     cursor: default; /* Change cursor to default */
   }
+.service-info .service-description{
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 1); /* Dark shadow */
 
+}
   .service-info {
-    background: url("../public/images/background_color.jpg") no-repeat center center / cover;
-
+   
     opacity: 1; /* Ensure service info is visible */
   }
 
@@ -499,7 +502,8 @@ color: whitesmoke;
     opacity: 1; /* Ensure it's visible */
     display: block; /* Show as a block element */
   }
-
+  .service-card:hover .service-info {
+    background: rgba(12, 12, 12, 0.823)  }
   /* Ensure the hover-title is visible regardless of hover state */
   .service-card .hover-title {
     opacity: 1; /* Make sure it's visible */
@@ -679,6 +683,10 @@ textarea:focus {
 }
 
 
+.testimonials h2{
+  text-align: center;
+  font-size: 2rem;
+}
 
 /* Testimonials Styles */
 .testimonials blockquote {
@@ -686,6 +694,13 @@ textarea:focus {
   border-left: 4px solid #ff5722;
   padding-left: 20px;
   margin: 20px 0;
+  padding-left: 10%;
+  align-items: left;
+  text-align: left;
+}
+
+.testimonials cite{
+  font-weight: 700;
 }
 
 
