--- a/src/App.css
+++ b/src/App.css
@@ -705,6 +705,7 @@ textarea:focus {
 
 
 .footer {
+  
   background-color: #0f0e0e;
   padding: 1.5rem 1.5rem; /* Vertical padding */
   color: #ddd;
@@ -721,6 +722,8 @@ textarea:focus {
 .footer h4{
   font-size:1.5rem ;
   color: #dca037;
+  margin-bottom: 0.5rem;
+  
 }
 .footer-links {
   display: flex;
@@ -804,6 +807,7 @@ line-height: 2;
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .footer {
+    
     flex-direction: column; /* Stack footer sections vertically */
     align-items: center; /* Center align for mobile */
     text-align: center; /* Center text alignment for all footer content */
