--- a/src/App.css
+++ b/src/App.css
@@ -450,12 +450,14 @@ color: whitesmoke;
     opacity: 1;
   }
   .service-description ul {
+    
     list-style-type: disc; /* Ensure bullet points */
     padding-left: 25px; /* Space between bullet and text */
     margin: 0; /* Remove default margin */
   }
   
   .service-description li {
+   
     font-size: 1.5rem; /* Font size for list items */
     color: white; /* Text color */
     margin-bottom: 5px; /* Space between items */
@@ -566,8 +568,10 @@ color: whitesmoke;
   }
   
   .service-description li {
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+
     font-size: 1rem; /* Font size for list items */
-    color: white; /* Text color */
+    color: rgb(255, 255, 255); /* Text color */
     margin-bottom: 5px; /* Space between items */
   }
 
